--- a/C/part3.html
+++ b/C/part3.html
@@ -4,6 +4,78 @@
   <head>
 	<style>
 		/* Write your code here */
+    .overlay{
+      border:4px solid red;
+      border-radius: 5px;
+      padding: 10px;
+      position: absolute;
+      top: 250px;
+      left: 360px;  
+      background-color: white;      
+      z-index: 1;
+    } 
+
+    h1 {
+      text-align: center;
+    } 
+
+      nav a {
+        display: inline-block;  
+        text-decoration: none;        
+        font-size: 30px;
+        color: white; 
+        border: 1px solid red;        
+        background-color: black;
+        text-align: center;
+        width: 200px;
+      }
+
+      nav {
+        padding-left: 300px;
+        padding-right: 200px;
+        background-color: black;
+      }
+
+      section{
+        padding-left: 300px;
+        padding-right: 300px;
+      }
+
+      .card {
+        border: 2px solid blue;
+        border-radius: 5px;
+        position: relative;
+        display: inline-block;
+        margin: 25px; 
+      }
+      
+      .title {
+        left: 0px;
+        top: 0px;
+        position: absolute;
+        color: white;
+        background-color: blue; 
+        width: 80px;
+        font-weight: bold;
+      }
+
+      .icon {
+        position: absolute;
+        right: 0px;
+        top: 0px;
+        background-color: white;
+      }
+
+      .price {
+        background-color: lightgrey;
+        text-align: center;
+        font-weight: bold;
+      }
+
+      body {
+        background-color: lightgrey;
+        justify-content: center;
+      }
 	</style>
   </head>
 
