--- a/E/part1.html
+++ b/E/part1.html
@@ -2,6 +2,33 @@
 <head>
 <style>
  /* Write your code here */
+ body {
+ 	background-color: lightgray;
+ }
+
+#overlay {position: fixed;
+ bottom: 0px;
+ right: 0px; 
+ border: 3px solid yellow ;
+ }
+
+ .overlaycontent{background-color: red;
+  padding-bottom:  20px;
+  padding-right:  20px;
+  padding-left: 20px;
+} 
+ 
+ .note{ 
+ 	display: flex;
+  	justify-content: center;
+  	font-weight: bold;
+  }
+
+ img {
+ 	display: flex;
+  	justify-content: center
+  }
+
 </style>
 </head>
 <body>
